<resources>
    <string name="app_name">Яке слово?</string>
    <string name="single">Грати</string>
    <string name="multiple">Команди</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">WORD %1$d</string>
    <string name="_01_00">01:00</string>
    <string name="round_start">Тримайте телефон горизонтально, екраном до команди</string>
    <string name="next">Далі</string>
    <string name="play">Грати</string>
    <string name="title_activity_teams">Teams</string>
    <string name="title_teams">Команди</string>
    <string name="title_options">Опції</string>
    <string name="title_menu">Меню</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_words">Для перемоги</string>
    <string name="seconds_round">Час раунду</string>
    <string name="fine">Мінус за пропуск</string>
    <string name="noSeeScreen">Відгадує команда</string>
    <string name="seeScreen">Відгадує гравець</string>
    <string name="goon">Продовжити</string>
    <string name="new_game">Нова Гра</string>
    <string name="round_end">Кінець раунду: </string>
    <string name="next_team">Наступна команда: </string>
    <string name="round">Раунд:</string>
    <string name="aim">Балів для перемоги:</string>
    <string name="winner">Переможець:</string>
    <string name="press_again">Натисніть ще раз, щоб вийти</string>
    <string name="num_categories">Вибрано категорій: </string>
    <string name="rules">Правила</string>
    <string name="rules_text">Дія роману «Соляріс» відбувається в далекому майбутньому. Розповідь ведеться від першої особи — доктора Кріса Кельвіна, який прибув на планету «Соляріс» для вирішення проблем з психологічним станом членів експедиції. В романі представлено дві сюжетні лінії: перебування Кельвіна на дослідницькій станції «Соляріс» і документальне викладення історії відкриття та дослідження планети в формі знайомства Кельвіна з науковою бібліотекою на борту станції.
    Дія роману «Соляріс» відбувається в далекому майбутньому. Розповідь ведеться від першої особи — доктора Кріса Кельвіна, який прибув на планету «Соляріс» для вирішення проблем з психологічним станом членів експедиції. В романі представлено дві сюжетні лінії: перебування Кельвіна на дослідницькій станції «Соляріс» і документальне викладення історії відкриття та дослідження планети в формі знайомства Кельвіна з науковою бібліотекою на борту станції.
    Дія роману «Соляріс» відбувається в далекому майбутньому. Розповідь ведеться від першої особи — доктора Кріса Кельвіна, який прибув на планету «Соляріс» для вирішення проблем з психологічним станом членів експедиції. В романі представлено дві сюжетні лінії: перебування Кельвіна на дослідницькій станції «Соляріс» і документальне викладення історії відкриття та дослідження планети в формі знайомства Кельвіна з науковою бібліотекою на борту станції.
    Дія роману «Соляріс» відбувається в далекому майбутньому. Розповідь ведеться від першої особи — доктора Кріса Кельвіна, який прибув на планету «Соляріс» для вирішення проблем з психологічним станом членів експедиції. В романі представлено дві сюжетні лінії: перебування Кельвіна на дослідницькій станції «Соляріс» і документальне викладення історії відкриття та дослідження планети в формі знайомства Кельвіна з науковою бібліотекою на борту станції.
</string>
</resources>
