<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.htoja.mifik.htoja.fragment.SetupSettingsFragment"
    android:label="@string/title_options">


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlNumberOfWords"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_words"
                android:textSize="@dimen/text_big"
                android:textColor="@color/primary_text"
                android:id="@+id/textView" />
            <TextView
                android:id="@+id/tvWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/bright_text"
                android:text="30"
                android:textSize="@dimen/text_big"
                app:layout_anchor="@id/rlNumberOfWords"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
            <SeekBar
                android:id="@+id/sbWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_alignParentEnd="true"
                android:max="190"
                android:progress="30"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider"/>

        <RelativeLayout
            android:id="@+id/rlSeconds"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds_round"
                android:textSize="@dimen/text_big"
                android:textColor="@color/primary_text"
                android:id="@+id/tvSHeader" />
            <TextView
                android:id="@+id/tvSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/bright_text"
                android:text="10"
                android:textSize="@dimen/text_big"
                app:layout_anchor="@id/rlSeconds"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
            <SeekBar
                android:id="@+id/sbSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSHeader"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_alignParentEnd="true"
                android:max="100"
                android:progress="0"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider"/>


        <RelativeLayout
            android:id="@+id/rlFine"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fine"
                android:textSize="@dimen/text_big"
                android:textColor="@color/primary_text"
                android:id="@+id/tvFineHeader" />

            <Switch
                android:id="@+id/swFine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tvFineHeader"
                android:layout_alignParentEnd="true"
                android:checked="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider"/>


    </LinearLayout>

    <Button
        android:id="@+id/btNext"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:enabled="true"
        android:gravity="center"
        android:onClick="clickGroups"
        android:textAllCaps="false"
        android:text="@string/next"
        android:textSize="@dimen/text_medium"
        app:layout_anchorGravity="center" />
</FrameLayout>
